cluster/core/netpol/jellyfin.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: jellyfin
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-jellyfin-ingress
  namespace: jellyfin
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              ns: traefik
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8096
    - from:
        - namespaceSelector:
            matchLabels:
              ns: jellyseerr
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jellyseerr
      ports:
        - protocol: TCP
          port: 8096
    - from:
        - namespaceSelector:
            matchLabels:
              ns: uptime
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: uptime
      ports:
        - protocol: TCP
          port: 8096
    - from:
        - namespaceSelector:
            matchLabels:
              ns: home-automation
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: home-assistant
      ports:
        - protocol: TCP
          port: 8096
    - from:
        - namespaceSelector:
            matchLabels:
              ns: autoscan
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: autoscan
      ports:
        - protocol: TCP
          port: 8096
    - from:
        - namespaceSelector:
            matchLabels:
              ns: wizarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: wizarr
      ports:
        - protocol: TCP
          port: 8096
    - from:
        - namespaceSelector:
            matchLabels:
              ns: jellystat
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jellystat
      ports:
        - protocol: TCP
          port: 8096
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-jellyfin-egress
  namespace: jellyfin
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              ns: adguard
          podSelector:
            matchLabels:
              app.kubernetes.io/name: adguard-home
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - ipBlock:
            cidr: 192.168.0.10/32
        - ipBlock:
            cidr: 192.168.0.77/32
        - ipBlock:
            cidr: 192.168.0.78/32
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - ipBlock:
            cidr: 192.168.20.98/32
    - to:
        - namespaceSelector:
            matchLabels:
              ns: sabnzbd
          podSelector:
            matchLabels:
              app.kubernetes.io/name: sabnzbd
      ports:
        - port: 8888
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              ns: unmanic
          podSelector:
            matchLabels:
              app.kubernetes.io/name: unmanic
      ports:
        - port: 8888
          protocol: TCP
